# CodeSegment

./: README.md
configfile/c++/: CParseCfg.cpp  CParseCfg.h
configfile/java/: ParseMain.java
configfile/python/: parseCfg.py  test.cfg
configfile/shell/: ini.sh  map.sh  test.sh  test_ini_mod.sh  test_ini_reload.sh  test_ini_save.sh  test_map_clear.sh  test_map_copy.sh  test_map_del.sh  test_map_haskey.sh  test_map_iterator.sh  test_map_set.sh  test_map_size.sh  text.ini  text_mod.ini  text_reload.cfg
database/c++/mysql/MariadbCModelWrapper/: .gitignore  CPersistObj.cpp  CPersistObj.h  CTestTable1.cpp  CTestTable1.h  MariadbCModelWrapper.cpp  MariadbCModelWrapper.sln  README.md  mariadb_persist.cpp  mariadb_persist.h  persistDataDef.h
database/java/mysql&sqlite/ormDemo/: .gitignore  .project
database/javascript/mysql&sqlite/sequelizeORM/: package-lock.json  package.json  sequelizeORM.js
interop/c++/ConsoleEcho/: .gitignore  CMakeLists.txt  consoleEcho.cpp
interop/java/ConsoleEcho/: .project
interop/nodejs/: consoleEcho.js  index.js
interop/python/: caller.py  consoleEcho.py
ipc/Qt5/QtProcessClientDemo/: .gitignore  main.cpp
ipc/Qt5/QtProcessDemo/: .gitignore  QtProcessDemo.pro  callerprocess.cpp  callerprocess.h  echoBack.sh  main.cpp
ipc/c/posix/process/: CMakeLists.txt  (+4 more)
ipc/c/posix/thread/: CMakeLists.txt  err_handle.c  err_handle.h  lock_double.c  lock_signal.c  lock_simple.c  lock_timed.c  lock_wrlock.c  thread_clean.c  thread_simple.c
proxy/ss/: ssinstall.sh
script/bash/: chsshport.sh
script/bat/video2gif/: cut2gif.bat  gen_git_co.bat
(+6 files in other folders)
